# netwatcher

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: check.yml  container.yml  integration.yml  lint.yml  sync-pr-description.yml  test.yml
crates/netwatcher-capturer/: Cargo.toml
crates/netwatcher-capturer/src/: capture.rs  main.rs
crates/netwatcher-common/: Cargo.toml
crates/netwatcher-common/src/: attack.rs  config.rs  event.rs  kafka.rs  lib.rs  parser.rs  security.rs  threat.rs
crates/netwatcher-enricher/: Cargo.toml
crates/netwatcher-enricher/src/: enrich.rs  feed.rs  main.rs
crates/netwatcher-gateway/: Cargo.toml
crates/netwatcher-gateway/src/: analyzer.rs  api.rs  main.rs  security.rs  state.rs
crates/netwatcher-indexer/: Cargo.toml
crates/netwatcher-indexer/src/: elasticsearch.rs  main.rs
crates/netwatcher-mcp/: Cargo.toml
crates/netwatcher-mcp/src/: main.rs  protocol.rs  security.rs  server.rs
crates/netwatcher-shipper/: Cargo.toml
crates/netwatcher-shipper/src/: main.rs  parser.rs  shipper.rs
deploy/docker-compose/: compose.capture.yaml  compose.yaml
deploy/kubernetes/: capture-daemonset.yaml  configmap.yaml  elasticsearch-kibana.yaml  kafka.yaml  kustomization.yaml  namespace.yaml  rust-services.yaml
docker/: Dockerfile.rust
docker/capture/: Dockerfile  supervisord.conf
docker/capture/scripts/: detect-interface.sh  entrypoint.sh  run-fatt.sh  run-p0f.sh  run-tcpdump.sh  run-zeek.sh
docker/capture/zeek/: local.zeek
docker/gateway/zeek/: local.zeek
docs/: architecture.md  getting-started.md  index.md
docs/features/: capture-agent.md  configuration.md  development.md  enricher.md  gateway.md  indexer.md  kibana-dashboards.md  kubernetes-deployment.md  mcp-server.md  security.md
kibana/: build-dashboards.py  import-dashboards.sh
kibana/dashboards/: netwatcher-dashboards.ndjson
mcp/: mcp.json
scripts/: seed-attack-events.sh  verify-capture-caps.sh  verify-stack.sh
