[workspace]
resolver = "2"
members = [
    "crates/netwatcher-common",
    "crates/netwatcher-gateway",
    "crates/netwatcher-indexer",
    "crates/netwatcher-enricher",
    "crates/netwatcher-mcp",
    "crates/netwatcher-shipper",
]
default-members = ["crates/netwatcher-gateway"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NetWatcher Contributors"]
repository = "https://github.com/netwatcher/netwatcher"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
elasticsearch = { version = "8.15.0-alpha.1" }
futures = "0.3"
notify = "6"
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
