[package]
name = "netwatcher-enricher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netwatcher-enricher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
netwatcher-common = { path = "../netwatcher-common" }
rdkafka.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
