[package]
name = "netwatcher-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netwatcher-gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
netwatcher-common = { path = "../netwatcher-common" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { workspace = true }
