[package]
name = "netwatcher-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netwatcher-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
elasticsearch.workspace = true
netwatcher-common = { path = "../netwatcher-common" }
netwatcher-indexer = { path = "../netwatcher-indexer" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
