[package]
name = "netwatcher-shipper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "netwatcher-shipper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
netwatcher-common = { path = "../netwatcher-common" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"

[dev-dependencies]
tempfile = "3"
